# quire

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
data/fonts/: OFL.txt
data/ocr/: common_fixes.toml
quire/: __init__.py  batch.py  cli.py  config.py  context.py  epubcheck.py  io_utils.py  logging_utils.py  models.py  pipeline.py  script_utils.py
quire/extract/: ocr.py  ocr_engine.py  pdf.py  refine.py  spreads.py  tesseract_engine.py
quire/postprocess/: __init__.py  common_ocr.py  glossary.py  mojibake.py  ocr_corrections.py  registry.py  script_detect.py  vocabulary.py
quire/postprocess/canonical/: __init__.py  quran.py  quran_plugin.py
quire/qc/: __init__.py  engine.py  models.py  page_images.py  page_text.py  parser.py  prompts.py  runner.py  writer.py
quire/render/: audit.py  chapters.py  cover.py  export.py  honorifics.py  overrides.py  package.py  typography.py
quire/structure/: pdf_based.py  vision_based.py
scripts/: compare_ocr.py
tests/: conftest.py  test_audit.py  test_audit_json.py  test_batch.py  test_batch_verification.py  test_book_heuristics.py  test_cli.py  test_config.py  test_context_isolation.py  test_epubcheck.py  test_extract_spreads.py  test_footnote_marker_recovery.py  test_io_utils.py  test_logging_utils.py  test_noteref_repair.py  test_ocr_engine.py  test_packaging.py  test_page_resume.py  test_pipeline_helpers.py  test_postprocess_misc.py  test_postprocess_vocabulary.py  test_qc.py  test_quran.py  test_render_chapters.py  test_render_cover.py  test_render_export.py  test_render_honorifics.py  test_render_overrides.py  test_script_utils.py  test_smoke.py  test_structure_vision.py  test_tesseract_engine.py  test_text_engine_build.py  test_typography.py
